--- a/src/css/loginstyle.css
+++ b/src/css/loginstyle.css
@@ -5,7 +5,7 @@ html {
 body {
     text-align: center;
     color: beige;
-    background-image: url(/img/login-bg.jpg);
+    background-image: url(/img/login-bg.png);
     background-size: cover;
     background-position: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -17,5 +17,12 @@ body {
 }
 
 h2 {
-    color: dimgrey;
+    color: white;
+}
+
+.logoutLblPos{
+
+    position:fixed;
+    right:10px;
+    top:5px;
 }
